# vid-kit-simple

./: .gitignore  .gitmodules  .prettierignore  INSTALLATION.md  index.html  package-lock.json  package.json
.cargo/: config.toml
.cursor/rules/: tauri--cursor-rules.mdc
.github/: copilot-instructions.md
docs/: architecture.md  development-plant.md  functional-design.md  ui-design.md
src/: App.tsx  main.tsx
src-tauri/: .rustfmt.toml  Cargo.toml  build.rs  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: log4rs.yaml
src-tauri/src/: gpu_detector.rs  lib.rs  main.rs  preset_manager.rs  state_manager.rs  video_processor.rs
src-tauri/src/commands/: mod.rs  task_commands.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/preset_manager/: mod.rs
src-tauri/src/services/video_processor/: error.rs  mod.rs  processor.rs  task.rs
src-tauri/src/state/: app_state.rs  conversion_state.rs  errors.rs  helpers.rs  mod.rs  preferences_state.rs
src-tauri/src/state/task_manager/: errors.rs  mod.rs  processor.rs
src-tauri/src/utils/: app_info.rs  error.rs  error_handler.rs  event_emitter.rs  gpu_detector.rs  logger.rs  mod.rs  store_helper.rs
src-tauri/tests/: gpu_detector_tests.rs  preset_manager_tests.rs
src/components/: AppHeader.tsx  ConvertView.tsx  EditView.tsx  SanitizeView.tsx  SplitView.tsx
src/constants/: stores.ts  theme.ts
src/context/: GlobalStateProvider.tsx  StateProviders.tsx
src/hooks/: index.ts  useAppState.ts  useAppStateStore.ts  useConversionState.ts  useConversionStateStore.ts  useError.ts  (+6 more)
(+91 files in other folders)
