[package]
name = "vid-kit-simple"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vid_kit_simple_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
toml = "0.8.0"

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gfx-hal = "0.9"
gfx-backend-vulkan = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
ffmpeg-next = { version = "7.1.0", features = ["static"] }
log = "0.4"
log4rs = "1.3.0"
parking_lot = "0.12.3"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
threadpool = "1.8.1"
num_cpus = "1.16.0"

[dev-dependencies]
tempfile = "3.8.1"

[features]
cuda = []
